Time: 26 ms (92.13%), Space: 51.8 MB (39.32%) - LeetHub